parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> SIGMA
Rule 1     SIGMA -> doctype ARTICLE
Rule 2     ARTICLE -> article INFO TITLEH1 CONT_A_S cArticle
Rule 3     ARTICLE -> article INFO TITLEH1 CONT_A_S SECTIONS cArticle
Rule 4     ARTICLE -> article TITLEH1 CONT_A_S cArticle
Rule 5     ARTICLE -> article TITLEH1 CONT_A_S SECTIONS cArticle
Rule 6     ARTICLE -> article INFO CONT_A_S cArticle
Rule 7     ARTICLE -> article INFO CONT_A_S SECTIONS cArticle
Rule 8     ARTICLE -> article CONT_A_S cArticle
Rule 9     INFO -> info CONT_INFO cInfo
Rule 10    CONT_INFO -> ELEM_INFO CONT_INFO
Rule 11    CONT_INFO -> ELEM_INFO
Rule 12    ELEM_INFO -> MEDIA_OBJECT
Rule 13    ELEM_INFO -> ABSTRACT
Rule 14    ELEM_INFO -> ADDRESS
Rule 15    ELEM_INFO -> AUTHOR
Rule 16    ELEM_INFO -> DATE
Rule 17    ELEM_INFO -> COPYRIGHT
Rule 18    ELEM_INFO -> TITLEH1
Rule 19    SECTION -> section CONT_A_S cSection
Rule 20    SECTION -> section CONT_A_S SECTIONS cSection
Rule 21    SECTION -> section INFO CONT_A_S cSection
Rule 22    SECTION -> section INFO CONT_A_S SECTIONS cSection
Rule 23    SECTION -> section TITLEH2 CONT_A_S cSection
Rule 24    SECTION -> section TITLEH2 CONT_A_S SECTIONS cSection
Rule 25    SECTION -> section INFO TITLEH2 CONT_A_S cSection
Rule 26    SECTION -> section INFO TITLEH2 CONT_A_S SECTIONS cSection
Rule 27    SECTION -> section TITLEH2 cSection
Rule 28    SECTIONS -> SECTION
Rule 29    SECTIONS -> SECTION SECTIONS
Rule 30    SECTIONS -> SIMPLE_SEC
Rule 31    SECTIONS -> SIMPLE_SEC SECTIONS
Rule 32    CONT_A_S -> CONT_1
Rule 33    CONT_A_S -> CONT_1 CONT_A_S
Rule 34    CONT_A_S -> SECTION
Rule 35    CONT_1 -> ITEMIZED_LIST
Rule 36    CONT_1 -> IMPORTANT
Rule 37    CONT_1 -> PARA
Rule 38    CONT_1 -> SIMPARA
Rule 39    CONT_1 -> ADDRESS
Rule 40    CONT_1 -> MEDIA_OBJECT
Rule 41    CONT_1 -> INFORMAL_TABLE
Rule 42    CONT_1 -> COMMENT
Rule 43    CONT_1 -> ABSTRACT
Rule 44    SIMPLE_SEC -> simpleSection CONT_SS cSimpleSection
Rule 45    SIMPLE_SEC -> simpleSection INFO CONT_SS cSimpleSection
Rule 46    SIMPLE_SEC -> simpleSection TITLE CONT_SS cSimpleSection
Rule 47    SIMPLE_SEC -> simpleSection INFO TITLE CONT_SS cSimpleSection
Rule 48    CONT_SS -> CONT_1
Rule 49    CONT_SS -> CONT_1 CONT_SS
Rule 50    ABSTRACT -> abstract TITLE cAbstract
Rule 51    ABSTRACT -> abstract TITLE PARAS cAbstract
Rule 52    TITLE -> title CONT_TITLE cTitle
Rule 53    TITLEH1 -> title CONT_TITLE cTitle
Rule 54    TITLEH2 -> title CONT_TITLE cTitle
Rule 55    CONT_TITLE -> ELEM_TITLE
Rule 56    CONT_TITLE -> ELEM_TITLE CONT_TITLE
Rule 57    ELEM_TITLE -> text
Rule 58    ELEM_TITLE -> EMPHASIS
Rule 59    ELEM_TITLE -> LINK
Rule 60    ELEM_TITLE -> EMAIL
Rule 61    PARAS -> PARA
Rule 62    PARAS -> SIMPARA
Rule 63    PARAS -> PARA PARAS
Rule 64    PARAS -> SIMPARA PARAS
Rule 65    PARA -> para CONT_PARA cPara
Rule 66    CONT_PARA -> ELEM_PARA
Rule 67    CONT_PARA -> ELEM_PARA CONT_PARA
Rule 68    ELEM_PARA -> text
Rule 69    ELEM_PARA -> EMPHASIS
Rule 70    ELEM_PARA -> LINK
Rule 71    ELEM_PARA -> EMAIL
Rule 72    ELEM_PARA -> AUTHOR
Rule 73    ELEM_PARA -> COMMENT
Rule 74    ELEM_PARA -> ITEMIZED_LIST
Rule 75    ELEM_PARA -> IMPORTANT
Rule 76    ELEM_PARA -> ADDRESS
Rule 77    ELEM_PARA -> MEDIA_OBJECT
Rule 78    ELEM_PARA -> INFORMAL_TABLE
Rule 79    ITEMIZED_LIST -> itemizedlist LIST_ITEM cItemizedlist
Rule 80    LIST_ITEM -> listItem CONT_ITEM cListItem
Rule 81    LIST_ITEM -> LIST_ITEM listItem CONT_ITEM cListItem
Rule 82    CONT_ITEM -> CONT_1
Rule 83    CONT_ITEM -> CONT_1 CONT_ITEM
Rule 84    MEDIA_OBJECT -> mediaObject INFO CONT_MEDIA_OBJECT cMediaObject
Rule 85    MEDIA_OBJECT -> mediaObject CONT_MEDIA_OBJECT cMediaObject
Rule 86    CONT_MEDIA_OBJECT -> IMAGE_OBJECT
Rule 87    CONT_MEDIA_OBJECT -> VIDEO_OBJECT
Rule 88    CONT_MEDIA_OBJECT -> IMAGE_OBJECT MEDIA_OBJECT
Rule 89    CONT_MEDIA_OBJECT -> VIDEO_OBJECT MEDIA_OBJECT
Rule 90    IMAGE_OBJECT -> imageObject INFO imageData cImageObject
Rule 91    IMAGE_OBJECT -> imageObject imageData cImageObject
Rule 92    VIDEO_OBJECT -> videoObject INFO imageData cVideoObject
Rule 93    VIDEO_OBJECT -> videoObject videoData cVideoObject
Rule 94    AUTHOR -> author CONT_AUTHOR cAuthor
Rule 95    CONT_AUTHOR -> FIRSTNAME
Rule 96    CONT_AUTHOR -> SURNAME
Rule 97    CONT_AUTHOR -> EMAIL
Rule 98    CONT_AUTHOR -> FIRSTNAME SURNAME
Rule 99    CONT_AUTHOR -> FIRSTNAME EMAIL
Rule 100   CONT_AUTHOR -> SURNAME EMAIL
Rule 101   CONT_AUTHOR -> FIRSTNAME SURNAME EMAIL
Rule 102   ADDRESS -> address cAddress
Rule 103   ADDRESS -> address CONT_ADDRESS cAddress
Rule 104   CONT_ADDRESS -> ELEM_ADDRESS
Rule 105   CONT_ADDRESS -> ELEM_ADDRESS CONT_ADDRESS
Rule 106   ELEM_ADDRESS -> STREET
Rule 107   ELEM_ADDRESS -> CITY
Rule 108   ELEM_ADDRESS -> STATE
Rule 109   ELEM_ADDRESS -> PHONE
Rule 110   ELEM_ADDRESS -> EMAIL
Rule 111   ELEM_ADDRESS -> text
Rule 112   COPYRIGHT -> copyright YEAR cCopyright
Rule 113   COPYRIGHT -> copyright YEAR HOLDER cCopyright
Rule 114   SIMPARA -> simpara CONT_SECL cSimpara
Rule 115   EMPHASIS -> emphasis CONT_SECL cEmphasis
Rule 116   COMMENT -> comment CONT_SECL cComment
Rule 117   LINK -> link CONT_SECL cLink
Rule 118   CONT_SECL -> CONT_2
Rule 119   CONT_SECL -> CONT_2 CONT_SECL
Rule 120   CONT_2 -> text
Rule 121   CONT_2 -> EMPHASIS
Rule 122   CONT_2 -> LINK
Rule 123   CONT_2 -> EMAIL
Rule 124   CONT_2 -> AUTHOR
Rule 125   CONT_2 -> COMMENT
Rule 126   IMPORTANT -> important TITLE CONT_IMPORTANT cImportant
Rule 127   IMPORTANT -> important CONT_IMPORTANT cImportant
Rule 128   CONT_IMPORTANT -> CONT_1
Rule 129   CONT_IMPORTANT -> CONT_1 CONT_IMPORTANT
Rule 130   CONT_VAR -> CONT_3
Rule 131   CONT_VAR -> CONT_3 CONT_VAR
Rule 132   CONT_3 -> text
Rule 133   CONT_3 -> LINK
Rule 134   CONT_3 -> EMPHASIS
Rule 135   CONT_3 -> COMMENT
Rule 136   FIRSTNAME -> firstname CONT_VAR cFirstname
Rule 137   SURNAME -> surname CONT_VAR cSurname
Rule 138   STREET -> street CONT_VAR cStreet
Rule 139   CITY -> city CONT_VAR cCity
Rule 140   STATE -> state CONT_VAR cState
Rule 141   PHONE -> phone CONT_VAR cPhone
Rule 142   EMAIL -> email CONT_VAR cEmail
Rule 143   DATE -> date CONT_VAR cDate
Rule 144   YEAR -> year CONT_VAR cYear
Rule 145   HOLDER -> holder CONT_VAR cHolder
Rule 146   INFORMAL_TABLE -> informalTable TABLE_MEDIA cInformalTable
Rule 147   INFORMAL_TABLE -> informalTable TABLE_GROUP cInformalTable
Rule 148   TABLE_MEDIA -> MEDIA_OBJECT
Rule 149   TABLE_MEDIA -> MEDIA_OBJECT TABLE_MEDIA
Rule 150   TABLE_GROUP -> TGROUP
Rule 151   TABLE_GROUP -> TGROUP TABLE_GROUP
Rule 152   TGROUP -> tgroup THEAD TBODY TFOOT cTgroup
Rule 153   TGROUP -> tgroup THEAD TBODY cTgroup
Rule 154   TGROUP -> tgroup TBODY TFOOT cTgroup
Rule 155   TGROUP -> tgroup TBODY cTgroup
Rule 156   THEAD -> thead CONT_TH cThead
Rule 157   CONT_TH -> ROWH
Rule 158   CONT_TH -> ROWH CONT_TH
Rule 159   ROWH -> row CONT_ROWH cRow
Rule 160   CONT_ROWH -> ENTRYH
Rule 161   CONT_ROWH -> ENTRYH CONT_ROWH
Rule 162   CONT_ROWH -> ENTRYTBLH
Rule 163   CONT_ROWH -> ENTRYTBLH CONT_ROWH
Rule 164   ENTRYH -> entry CONT_ENTRY cEntry
Rule 165   ENTRYTBLH -> entrytbl THEAD TBODY cEntrytbl
Rule 166   ENTRYTBLH -> entrytbl TBODY cEntrytbl
Rule 167   CONT_T -> ROW
Rule 168   CONT_T -> ROW CONT_T
Rule 169   TFOOT -> tfoot CONT_T cTfoot
Rule 170   TBODY -> tbody CONT_T cTbody
Rule 171   ROW -> row CONT_ROW cRow
Rule 172   CONT_ROW -> ENTRY
Rule 173   CONT_ROW -> ENTRY CONT_ROW
Rule 174   CONT_ROW -> ENTRYTBL
Rule 175   CONT_ROW -> ENTRYTBL CONT_ROW
Rule 176   ENTRY -> entry CONT_ENTRY cEntry
Rule 177   ENTRYTBL -> entrytbl THEAD TBODY cEntrytbl
Rule 178   ENTRYTBL -> entrytbl TBODY cEntrytbl
Rule 179   CONT_ENTRY -> text
Rule 180   CONT_ENTRY -> text CONT_ENTRY
Rule 181   CONT_ENTRY -> ITEMIZED_LIST
Rule 182   CONT_ENTRY -> ITEMIZED_LIST CONT_ENTRY
Rule 183   CONT_ENTRY -> IMPORTANT
Rule 184   CONT_ENTRY -> IMPORTANT CONT_ENTRY
Rule 185   CONT_ENTRY -> PARA
Rule 186   CONT_ENTRY -> PARA CONT_ENTRY
Rule 187   CONT_ENTRY -> SIMPARA
Rule 188   CONT_ENTRY -> SIMPARA CONT_ENTRY
Rule 189   CONT_ENTRY -> COMMENT
Rule 190   CONT_ENTRY -> COMMENT CONT_ENTRY
Rule 191   CONT_ENTRY -> ABSTRACT
Rule 192   CONT_ENTRY -> ABSTRACT CONT_ENTRY
Rule 193   CONT_ENTRY -> MEDIA_OBJECT
Rule 194   CONT_ENTRY -> MEDIA_OBJECT CONT_ENTRY

Terminals, with rules where they appear

abstract             : 50 51
address              : 102 103
article              : 2 3 4 5 6 7 8
author               : 94
cAbstract            : 50 51
cAddress             : 102 103
cArticle             : 2 3 4 5 6 7 8
cAuthor              : 94
cCity                : 139
cComment             : 116
cCopyright           : 112 113
cDate                : 143
cEmail               : 142
cEmphasis            : 115
cEntry               : 164 176
cEntrytbl            : 165 166 177 178
cFirstname           : 136
cHolder              : 145
cImageObject         : 90 91
cImportant           : 126 127
cInfo                : 9
cInformalTable       : 146 147
cItemizedlist        : 79
cLink                : 117
cListItem            : 80 81
cMediaObject         : 84 85
cPara                : 65
cPhone               : 141
cRow                 : 159 171
cSection             : 19 20 21 22 23 24 25 26 27
cSimpara             : 114
cSimpleSection       : 44 45 46 47
cState               : 140
cStreet              : 138
cSurname             : 137
cTbody               : 170
cTfoot               : 169
cTgroup              : 152 153 154 155
cThead               : 156
cTitle               : 52 53 54
cVideoObject         : 92 93
cYear                : 144
city                 : 139
comment              : 116
copyright            : 112 113
date                 : 143
doctype              : 1
email                : 142
emphasis             : 115
entry                : 164 176
entrytbl             : 165 166 177 178
error                : 
firstname            : 136
holder               : 145
imageData            : 90 91 92
imageObject          : 90 91
important            : 126 127
info                 : 9
informalTable        : 146 147
itemizedlist         : 79
link                 : 117
listItem             : 80 81
mediaObject          : 84 85
para                 : 65
phone                : 141
row                  : 159 171
section              : 19 20 21 22 23 24 25 26 27
simpara              : 114
simpleSection        : 44 45 46 47
state                : 140
street               : 138
surname              : 137
tbody                : 170
text                 : 57 68 111 120 132 179 180
tfoot                : 169
tgroup               : 152 153 154 155
thead                : 156
title                : 52 53 54
videoData            : 93
videoObject          : 92 93
year                 : 144

Nonterminals, with rules where they appear

ABSTRACT             : 13 43 191 192
ADDRESS              : 14 39 76
ARTICLE              : 1
AUTHOR               : 15 72 124
CITY                 : 107
COMMENT              : 42 73 125 135 189 190
CONT_1               : 32 33 48 49 82 83 128 129
CONT_2               : 118 119
CONT_3               : 130 131
CONT_ADDRESS         : 103 105
CONT_AUTHOR          : 94
CONT_A_S             : 2 3 4 5 6 7 8 19 20 21 22 23 24 25 26 33
CONT_ENTRY           : 164 176 180 182 184 186 188 190 192 194
CONT_IMPORTANT       : 126 127 129
CONT_INFO            : 9 10
CONT_ITEM            : 80 81 83
CONT_MEDIA_OBJECT    : 84 85
CONT_PARA            : 65 67
CONT_ROW             : 171 173 175
CONT_ROWH            : 159 161 163
CONT_SECL            : 114 115 116 117 119
CONT_SS              : 44 45 46 47 49
CONT_T               : 168 169 170
CONT_TH              : 156 158
CONT_TITLE           : 52 53 54 56
CONT_VAR             : 131 136 137 138 139 140 141 142 143 144 145
COPYRIGHT            : 17
DATE                 : 16
ELEM_ADDRESS         : 104 105
ELEM_INFO            : 10 11
ELEM_PARA            : 66 67
ELEM_TITLE           : 55 56
EMAIL                : 60 71 97 99 100 101 110 123
EMPHASIS             : 58 69 121 134
ENTRY                : 172 173
ENTRYH               : 160 161
ENTRYTBL             : 174 175
ENTRYTBLH            : 162 163
FIRSTNAME            : 95 98 99 101
HOLDER               : 113
IMAGE_OBJECT         : 86 88
IMPORTANT            : 36 75 183 184
INFO                 : 2 3 6 7 21 22 25 26 45 47 84 90 92
INFORMAL_TABLE       : 41 78
ITEMIZED_LIST        : 35 74 181 182
LINK                 : 59 70 122 133
LIST_ITEM            : 79 81
MEDIA_OBJECT         : 12 40 77 88 89 148 149 193 194
PARA                 : 37 61 63 185 186
PARAS                : 51 63 64
PHONE                : 109
ROW                  : 167 168
ROWH                 : 157 158
SECTION              : 28 29 34
SECTIONS             : 3 5 7 20 22 24 26 29 31
SIGMA                : 0
SIMPARA              : 38 62 64 187 188
SIMPLE_SEC           : 30 31
STATE                : 108
STREET               : 106
SURNAME              : 96 98 100 101
TABLE_GROUP          : 147 151
TABLE_MEDIA          : 146 149
TBODY                : 152 153 154 155 165 166 177 178
TFOOT                : 152 154
TGROUP               : 150 151
THEAD                : 152 153 165 177
TITLE                : 46 47 50 51 126
TITLEH1              : 2 3 4 5 18
TITLEH2              : 23 24 25 26 27
VIDEO_OBJECT         : 87 89
YEAR                 : 112 113

Parsing method: LALR

state 0

    (0) S' -> . SIGMA
    (1) SIGMA -> . doctype ARTICLE

    doctype         shift and go to state 2

    SIGMA                          shift and go to state 1

state 1

    (0) S' -> SIGMA .



state 2

    (1) SIGMA -> doctype . ARTICLE
    (2) ARTICLE -> . article INFO TITLEH1 CONT_A_S cArticle
    (3) ARTICLE -> . article INFO TITLEH1 CONT_A_S SECTIONS cArticle
    (4) ARTICLE -> . article TITLEH1 CONT_A_S cArticle
    (5) ARTICLE -> . article TITLEH1 CONT_A_S SECTIONS cArticle
    (6) ARTICLE -> . article INFO CONT_A_S cArticle
    (7) ARTICLE -> . article INFO CONT_A_S SECTIONS cArticle
    (8) ARTICLE -> . article CONT_A_S cArticle

    article         shift and go to state 4

    ARTICLE                        shift and go to state 3

state 3

    (1) SIGMA -> doctype ARTICLE .

    $end            reduce using rule 1 (SIGMA -> doctype ARTICLE .)


state 4

    (2) ARTICLE -> article . INFO TITLEH1 CONT_A_S cArticle
    (3) ARTICLE -> article . INFO TITLEH1 CONT_A_S SECTIONS cArticle
    (4) ARTICLE -> article . TITLEH1 CONT_A_S cArticle
    (5) ARTICLE -> article . TITLEH1 CONT_A_S SECTIONS cArticle
    (6) ARTICLE -> article . INFO CONT_A_S cArticle
    (7) ARTICLE -> article . INFO CONT_A_S SECTIONS cArticle
    (8) ARTICLE -> article . CONT_A_S cArticle
    (9) INFO -> . info CONT_INFO cInfo
    (53) TITLEH1 -> . title CONT_TITLE cTitle
    (32) CONT_A_S -> . CONT_1
    (33) CONT_A_S -> . CONT_1 CONT_A_S
    (34) CONT_A_S -> . SECTION
    (35) CONT_1 -> . ITEMIZED_LIST
    (36) CONT_1 -> . IMPORTANT
    (37) CONT_1 -> . PARA
    (38) CONT_1 -> . SIMPARA
    (39) CONT_1 -> . ADDRESS
    (40) CONT_1 -> . MEDIA_OBJECT
    (41) CONT_1 -> . INFORMAL_TABLE
    (42) CONT_1 -> . COMMENT
    (43) CONT_1 -> . ABSTRACT
    (19) SECTION -> . section CONT_A_S cSection
    (20) SECTION -> . section CONT_A_S SECTIONS cSection
    (21) SECTION -> . section INFO CONT_A_S cSection
    (22) SECTION -> . section INFO CONT_A_S SECTIONS cSection
    (23) SECTION -> . section TITLEH2 CONT_A_S cSection
    (24) SECTION -> . section TITLEH2 CONT_A_S SECTIONS cSection
    (25) SECTION -> . section INFO TITLEH2 CONT_A_S cSection
    (26) SECTION -> . section INFO TITLEH2 CONT_A_S SECTIONS cSection
    (27) SECTION -> . section TITLEH2 cSection
    (79) ITEMIZED_LIST -> . itemizedlist LIST_ITEM cItemizedlist
    (126) IMPORTANT -> . important TITLE CONT_IMPORTANT cImportant
    (127) IMPORTANT -> . important CONT_IMPORTANT cImportant
    (65) PARA -> . para CONT_PARA cPara
    (114) SIMPARA -> . simpara CONT_SECL cSimpara
    (102) ADDRESS -> . address cAddress
    (103) ADDRESS -> . address CONT_ADDRESS cAddress
    (84) MEDIA_OBJECT -> . mediaObject INFO CONT_MEDIA_OBJECT cMediaObject
    (85) MEDIA_OBJECT -> . mediaObject CONT_MEDIA_OBJECT cMediaObject
    (146) INFORMAL_TABLE -> . informalTable TABLE_MEDIA cInformalTable
    (147) INFORMAL_TABLE -> . informalTable TABLE_GROUP cInformalTable
    (116) COMMENT -> . comment CONT_SECL cComment
    (50) ABSTRACT -> . abstract TITLE cAbstract
    (51) ABSTRACT -> . abstract TITLE PARAS cAbstract

    info            shift and go to state 8
    title           shift and go to state 9
    section         shift and go to state 21
    itemizedlist    shift and go to state 22
    important       shift and go to state 23
    para            shift and go to state 24
    simpara         shift and go to state 25
    address         shift and go to state 26
    mediaObject     shift and go to state 27
    informalTable   shift and go to state 28
    comment         shift and go to state 29
    abstract        shift and go to state 30

    INFO                           shift and go to state 5
    TITLEH1                        shift and go to state 6
    CONT_A_S                       shift and go to state 7
    CONT_1                         shift and go to state 10
    SECTION                        shift and go to state 11
    ITEMIZED_LIST                  shift and go to state 12
    IMPORTANT                      shift and go to state 13
    PARA                           shift and go to state 14
    SIMPARA                        shift and go to state 15
    ADDRESS                        shift and go to state 16
    MEDIA_OBJECT                   shift and go to state 17
    INFORMAL_TABLE                 shift and go to state 18
    COMMENT                        shift and go to state 19
    ABSTRACT                       shift and go to state 20

state 5

    (2) ARTICLE -> article INFO . TITLEH1 CONT_A_S cArticle
    (3) ARTICLE -> article INFO . TITLEH1 CONT_A_S SECTIONS cArticle
    (6) ARTICLE -> article INFO . CONT_A_S cArticle
    (7) ARTICLE -> article INFO . CONT_A_S SECTIONS cArticle
    (53) TITLEH1 -> . title CONT_TITLE cTitle
    (32) CONT_A_S -> . CONT_1
    (33) CONT_A_S -> . CONT_1 CONT_A_S
    (34) CONT_A_S -> . SECTION
    (35) CONT_1 -> . ITEMIZED_LIST
    (36) CONT_1 -> . IMPORTANT
    (37) CONT_1 -> . PARA
    (38) CONT_1 -> . SIMPARA
    (39) CONT_1 -> . ADDRESS
    (40) CONT_1 -> . MEDIA_OBJECT
    (41) CONT_1 -> . INFORMAL_TABLE
    (42) CONT_1 -> . COMMENT
    (43) CONT_1 -> . ABSTRACT
    (19) SECTION -> . section CONT_A_S cSection
    (20) SECTION -> . section CONT_A_S SECTIONS cSection
    (21) SECTION -> . section INFO CONT_A_S cSection
    (22) SECTION -> . section INFO CONT_A_S SECTIONS cSection
    (23) SECTION -> . section TITLEH2 CONT_A_S cSection
    (24) SECTION -> . section TITLEH2 CONT_A_S SECTIONS cSection
    (25) SECTION -> . section INFO TITLEH2 CONT_A_S cSection
    (26) SECTION -> . section INFO TITLEH2 CONT_A_S SECTIONS cSection
    (27) SECTION -> . section TITLEH2 cSection
    (79) ITEMIZED_LIST -> . itemizedlist LIST_ITEM cItemizedlist
    (126) IMPORTANT -> . important TITLE CONT_IMPORTANT cImportant
    (127) IMPORTANT -> . important CONT_IMPORTANT cImportant
    (65) PARA -> . para CONT_PARA cPara
    (114) SIMPARA -> . simpara CONT_SECL cSimpara
    (102) ADDRESS -> . address cAddress
    (103) ADDRESS -> . address CONT_ADDRESS cAddress
    (84) MEDIA_OBJECT -> . mediaObject INFO CONT_MEDIA_OBJECT cMediaObject
    (85) MEDIA_OBJECT -> . mediaObject CONT_MEDIA_OBJECT cMediaObject
    (146) INFORMAL_TABLE -> . informalTable TABLE_MEDIA cInformalTable
    (147) INFORMAL_TABLE -> . informalTable TABLE_GROUP cInformalTable
    (116) COMMENT -> . comment CONT_SECL cComment
    (50) ABSTRACT -> . abstract TITLE cAbstract
    (51) ABSTRACT -> . abstract TITLE PARAS cAbstract

    title           shift and go to state 9
    section         shift and go to state 21
    itemizedlist    shift and go to state 22
    important       shift and go to state 23
    para            shift and go to state 24
    simpara         shift and go to state 25
    address         shift and go to state 26
    mediaObject     shift and go to state 27
    informalTable   shift and go to state 28
    comment         shift and go to state 29
    abstract        shift and go to state 30

    TITLEH1                        shift and go to state 31
    CONT_A_S                       shift and go to state 32
    CONT_1                         shift and go to state 10
    SECTION                        shift and go to state 11
    ITEMIZED_LIST                  shift and go to state 12
    IMPORTANT                      shift and go to state 13
    PARA                           shift and go to state 14
    SIMPARA                        shift and go to state 15
    ADDRESS                        shift and go to state 16
    MEDIA_OBJECT                   shift and go to state 17
    INFORMAL_TABLE                 shift and go to state 18
    COMMENT                        shift and go to state 19
    ABSTRACT                       shift and go to state 20

state 6

    (4) ARTICLE -> article TITLEH1 . CONT_A_S cArticle
    (5) ARTICLE -> article TITLEH1 . CONT_A_S SECTIONS cArticle
    (32) CONT_A_S -> . CONT_1
    (33) CONT_A_S -> . CONT_1 CONT_A_S
    (34) CONT_A_S -> . SECTION
    (35) CONT_1 -> . ITEMIZED_LIST
    (36) CONT_1 -> . IMPORTANT
    (37) CONT_1 -> . PARA
    (38) CONT_1 -> . SIMPARA
    (39) CONT_1 -> . ADDRESS
    (40) CONT_1 -> . MEDIA_OBJECT
    (41) CONT_1 -> . INFORMAL_TABLE
    (42) CONT_1 -> . COMMENT
    (43) CONT_1 -> . ABSTRACT
    (19) SECTION -> . section CONT_A_S cSection
    (20) SECTION -> . section CONT_A_S SECTIONS cSection
    (21) SECTION -> . section INFO CONT_A_S cSection
    (22) SECTION -> . section INFO CONT_A_S SECTIONS cSection
    (23) SECTION -> . section TITLEH2 CONT_A_S cSection
    (24) SECTION -> . section TITLEH2 CONT_A_S SECTIONS cSection
    (25) SECTION -> . section INFO TITLEH2 CONT_A_S cSection
    (26) SECTION -> . section INFO TITLEH2 CONT_A_S SECTIONS cSection
    (27) SECTION -> . section TITLEH2 cSection
    (79) ITEMIZED_LIST -> . itemizedlist LIST_ITEM cItemizedlist
    (126) IMPORTANT -> . important TITLE CONT_IMPORTANT cImportant
    (127) IMPORTANT -> . important CONT_IMPORTANT cImportant
    (65) PARA -> . para CONT_PARA cPara
    (114) SIMPARA -> . simpara CONT_SECL cSimpara
    (102) ADDRESS -> . address cAddress
    (103) ADDRESS -> . address CONT_ADDRESS cAddress
    (84) MEDIA_OBJECT -> . mediaObject INFO CONT_MEDIA_OBJECT cMediaObject
    (85) MEDIA_OBJECT -> . mediaObject CONT_MEDIA_OBJECT cMediaObject
    (146) INFORMAL_TABLE -> . informalTable TABLE_MEDIA cInformalTable
    (147) INFORMAL_TABLE -> . informalTable TABLE_GROUP cInformalTable
    (116) COMMENT -> . comment CONT_SECL cComment
    (50) ABSTRACT -> . abstract TITLE cAbstract
    (51) ABSTRACT -> . abstract TITLE PARAS cAbstract

    section         shift and go to state 21
    itemizedlist    shift and go to state 22
    important       shift and go to state 23
    para            shift and go to state 24
    simpara         shift and go to state 25
    address         shift and go to state 26
    mediaObject     shift and go to state 27
    informalTable   shift and go to state 28
    comment         shift and go to state 29
    abstract        shift and go to state 30

    CONT_A_S                       shift and go to state 33
    CONT_1                         shift and go to state 10
    SECTION                        shift and go to state 11
    ITEMIZED_LIST                  shift and go to state 12
    IMPORTANT                      shift and go to state 13
    PARA                           shift and go to state 14
    SIMPARA                        shift and go to state 15
    ADDRESS                        shift and go to state 16
    MEDIA_OBJECT                   shift and go to state 17
    INFORMAL_TABLE                 shift and go to state 18
    COMMENT                        shift and go to state 19
    ABSTRACT                       shift and go to state 20

state 7

    (8) ARTICLE -> article CONT_A_S . cArticle

    cArticle        shift and go to state 34


state 8

    (9) INFO -> info . CONT_INFO cInfo
    (10) CONT_INFO -> . ELEM_INFO CONT_INFO
    (11) CONT_INFO -> . ELEM_INFO
    (12) ELEM_INFO -> . MEDIA_OBJECT
    (13) ELEM_INFO -> . ABSTRACT
    (14) ELEM_INFO -> . ADDRESS
    (15) ELEM_INFO -> . AUTHOR
    (16) ELEM_INFO -> . DATE
    (17) ELEM_INFO -> . COPYRIGHT
    (18) ELEM_INFO -> . TITLEH1
    (84) MEDIA_OBJECT -> . mediaObject INFO CONT_MEDIA_OBJECT cMediaObject
    (85) MEDIA_OBJECT -> . mediaObject CONT_MEDIA_OBJECT cMediaObject
    (50) ABSTRACT -> . abstract TITLE cAbstract
    (51) ABSTRACT -> . abstract TITLE PARAS cAbstract
    (102) ADDRESS -> . address cAddress
    (103) ADDRESS -> . address CONT_ADDRESS cAddress
    (94) AUTHOR -> . author CONT_AUTHOR cAuthor
    (143) DATE -> . date CONT_VAR cDate
    (112) COPYRIGHT -> . copyright YEAR cCopyright
    (113) COPYRIGHT -> . copyright YEAR HOLDER cCopyright
    (53) TITLEH1 -> . title CONT_TITLE cTitle

    mediaObject     shift and go to state 27
    abstract        shift and go to state 30
    address         shift and go to state 26
    author          shift and go to state 44
    date            shift and go to state 45
    copyright       shift and go to state 46
    title           shift and go to state 9

    CONT_INFO                      shift and go to state 35
    ELEM_INFO                      shift and go to state 36
    MEDIA_OBJECT                   shift and go to state 37
    ABSTRACT                       shift and go to state 38
    ADDRESS                        shift and go to state 39
    AUTHOR                         shift and go to state 40
    DATE                           shift and go to state 41
    COPYRIGHT                      shift and go to state 42
    TITLEH1                        shift and go to state 43

state 9

    (53) TITLEH1 -> title . CONT_TITLE cTitle
    (55) CONT_TITLE -> . ELEM_TITLE
    (56) CONT_TITLE -> . ELEM_TITLE CONT_TITLE
    (57) ELEM_TITLE -> . text
    (58) ELEM_TITLE -> . EMPHASIS
    (59) ELEM_TITLE -> . LINK
    (60) ELEM_TITLE -> . EMAIL
    (115) EMPHASIS -> . emphasis CONT_SECL cEmphasis
    (117) LINK -> . link CONT_SECL cLink
    (142) EMAIL -> . email CONT_VAR cEmail

    text            shift and go to state 49
    emphasis        shift and go to state 53
    link            shift and go to state 54
    email           shift and go to state 55

    CONT_TITLE                     shift and go to state 47
    ELEM_TITLE                     shift and go to state 48
    EMPHASIS                       shift and go to state 50
    LINK                           shift and go to state 51
    EMAIL                          shift and go to state 52

state 10
